# insights-sdk-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.dev.dockerignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: cli-reference.md  installation.md  sdk-guide.md
src/insights_sdk/: __init__.py  auth.py  cli.py  client.py  models.py
tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_cli_integration.py  test_client.py  test_docker.py  test_models.py
